
-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).
   - ofaBatSelect: display unused count (todo #990) .
   - ofaITreeviewColumn: add ofaIConcil 'Type' column for display selection.
   - ofaRenderPage: no more disabled 'Render' button after rendering (todo #980).

 Bug fixes:

   - import-bourso-pdf/ofaImporter: accept empty lines on bottom page.
   - ofaExportAssistant: fix type selection (todo #982).
   - ofaGuidedInput: fix fields reset after validation (todo #973).
   - ofaLedgerClose: remove unused (and badly cast) box. 
   - ofaReconciliationPage: does not try to associate a batline to a deleted entry.
   - ofaReconciliationPage: improve concililation groups management (todo #976).
   - ofaReconciliationPage: fix concililation/unconciliation operations (todo #977).
   - ofaReconciliationPage: fix display of new entry conciliation date (todo #991).
   - ofoAccount: fix ofo_account_get_by_number() assertion (todo #972).
   - ofoBat: fix setting imported identifier on import (todo #989).
   - ofoBat: do not free collection on import (todo #795).
   - ofoEntry: remove warning on conciliation delete.
   - ofoEntry: fix entry import.

 Other changes:

   - ofa_iconcil_get_instance_id(): new method.
   - ofa_iconcil_get_instance_type(): new method.
   - ofa_list_store_get_hub(): new method.
   - ofo_account_is_valid_data(): returns an error message.
   - ofo_bat_line_get_bat_id_from_bat_line_id(): new method.
   - ofo_concil_for_each_member: new method.

-----------------------------------------------------------------------
 Version 0.47
 ============

 Released on 2016-02-01

 New features and improvements:
