@@ -492,8 +492,6 @@
                 depreciate myDialog, replacing it with myIDialog
                 objects valid_data method() provides an error message
 
- 993 2016- 2-14 ofaBatPage: set selection on newly imported BAT file
-
  994
 
 -----------------------------------------------------------------------
@@ -779,6 +777,9 @@
                      would be conciliated (date is normal black) but 
                      without conciliation id - see trash/bug991
      2016- 2-13 fixed
+
+ 993 2016- 2-14 ofaBatPage: set selection on newly imported BAT file
+     2016- 2-14 done
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
